# oryx-crt-cpp

./: .clang-format  .clangd  CMakeLists.txt  README.md
.github/workflows/: linux.yaml  windows.yaml
cmake/: oryx-crt-cpp-config.cmake.in  utils.cmake
include/oryx/: argparse.hpp  callback_list.hpp  enchantum.hpp  enum_bit_flags.hpp  error.hpp  error_group.hpp  expected.hpp  from_chars.hpp  function_tracer.hpp  is_one_of.hpp  lazy_component.hpp  periodic_scheduler.hpp  retry.hpp  scope_exit.hpp  spsc_queue.hpp  string_split.hpp  synchronized.hpp  traits.hpp  types.hpp  unique_file_ptr.hpp  uuid.hpp
include/oryx/chrono/: cycle_timer.hpp  frame_rate_controller.hpp  now.hpp  stopwatch.hpp
include/oryx/crt/: argparse.hpp  boolean.hpp  callback_list.hpp  cycle_timer.hpp  error.hpp  error_group.hpp  expected.hpp  from_chars.hpp  function_tracer.hpp  httplib.hpp  is_one_of.hpp  lazy_component.hpp  periodic_scheduler.hpp  retry.hpp  scope_exit.hpp  spsc_queue.hpp  stopwatch.hpp  string_split.hpp  synchronized.hpp  thread_pool.hpp  traits.hpp  unique_file_ptr.hpp  uuid.hpp  version.hpp
src/: frame_rate_controller.cpp  uuid.cpp  version.cpp
tests/: argparse_test.cpp  boolean_test.cpp  callback_list_test.cpp  chrono_mock_clock.hpp  doctest.hpp  error_group_test.cpp  error_test.cpp  from_chars_test.cpp  is_one_off_test.cpp  lazy_component_test.cpp  periodic_scheduler_test.cpp  retry_test.cpp  scope_exit_test.cpp  stopwatch_test.cpp  string_split_test.cpp  synchronized_test.cpp  traits_test.cpp  unique_file_ptr_test.cpp
